--- a/src/index.scss
+++ b/src/index.scss
@@ -82,6 +82,7 @@ $gray-color: #4b556a;
     font-size: 20px;
     font-weight: 600;
     cursor: pointer;
+    color: $primary-color;
   }
 
   &-img {
@@ -100,7 +101,24 @@ $gray-color: #4b556a;
     cursor: pointer;
     display: flex;
     align-items: center;
+    position: relative;
   }
+}
+
+.cart-quantity {
+  position: absolute;
+  background: #fbd44c;
+  font-weight: 600;
+  font-size: 16px;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: -5px;
+  right: -10px;
+  z-index: 100;
 }
 
 .body {
@@ -248,6 +266,7 @@ $gray-color: #4b556a;
     border: 1px solid $primary-color;
     color: $primary-color;
     display: flex;
+    justify-content: center;
     align-items: center;
     padding: 10px 60px;
     font-weight: 600;
@@ -346,13 +365,19 @@ $gray-color: #4b556a;
   height: 80px;
 }
 
+.active-img {
+  border: 2px solid rgba(91, 33, 182, 0.5);
+}
+
 @media screen and (max-width: 769px) {
   .product {
     &-list {
       --columns: 2;
     }
   }
-
+  .cart-products > td {
+    margin: 20px 0;
+  }
   .detail-main {
     flex-direction: column;
     gap: 30px 0;
@@ -364,12 +389,138 @@ $gray-color: #4b556a;
       padding: 10px 20px;
     }
   }
-}
 
-@media screen and (max-width: 769px) {
   .product {
     &-list {
       --columns: 1;
     }
   }
+
+  .header-main {
+    padding-top: 10px;
+  }
+
+  .cart {
+    &-productName {
+      img {
+        display: none;
+      }
+    }
+  }
+
+  .body-children {
+    padding-top: 45px;
+  }
+}
+
+.cart {
+  &-wrapper {
+    max-width: 640px;
+    padding: 0 20px;
+    margin: 0 auto;
+  }
+  &-heading {
+    font-size: 36px;
+    font-weight: 600;
+    color: $primary-color;
+    margin: 20px 0;
+    text-align: center;
+  }
+  &-titles {
+    font-weight: 400;
+    color: $primary-color;
+    border-bottom: 1px solid #dfd6fe;
+    text-align: center;
+  }
+  &-title {
+    padding-bottom: 15px;
+  }
+  &-products {
+    margin: 10px 0;
+    border-bottom: 1px solid #f5f3ff;
+  }
+  &-productName {
+    display: flex;
+    align-items: center;
+    img {
+      aspect-ratio: 1;
+      width: 64px;
+    }
+  }
+  &-productQuan {
+    text-align: center;
+  }
+  &-productPrice {
+    font-weight: 300;
+    text-align: center;
+  }
+  &-productRemove {
+    border: 1px solid $primary-color;
+    color: $primary-color;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    font-weight: 600;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 0 auto;
+
+    &:hover {
+      background: #f5f3ff;
+    }
+  }
+}
+
+.cart {
+  &-subtotal {
+    font-size: 20px;
+  }
+}
+.subtotal {
+  &-title {
+    font-weight: 600;
+  }
+  &-price {
+    color: $primary-color;
+    font-weight: 600;
+  }
+}
+.cart-btns {
+  display: flex;
+  flex-direction: column;
+  gap: 10px 0;
+  max-width: 400px;
+  margin: 20px auto 0;
+}
+
+.loading-box {
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+}
+
+.square-loading {
+  width: 100px;
+  height: 100px;
+  background-color: rgb(106, 90, 249);
+  border-radius: 8px;
+  animation: flip 1.2s ease-in-out infinite;
+}
+@keyframes flip {
+  0% {
+    transform: perspective(200px) rotateX(0) rotateY(0);
+  }
+  50% {
+    transform: perspective(200px) rotateX(180deg) rotateY(0);
+  }
+  100% {
+    transform: perspective(200px) rotateX(180deg) rotateY(180deg);
+  }
+}
+
+.table {
+  width: 100%;
 }
