changed logout button

--- a/src/index.scss
+++ b/src/index.scss
@@ -550,4 +550,7 @@ $gray-color: #4b556a;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #ff4c4f;
+  cursor: pointer;
+  gap: 0 5px;
 }
